--- a/gb/24/10/29/n14360343.md
+++ b/gb/24/10/29/n14360343.md
@@ -3,64 +3,58 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>抢劫全省8家银行超200万元 四人被捕 一人被通缉</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/10/id14360353-bank-robbery-600x400.jpg" />
-<h6>省警官员于 2024年 10月29日公布了Opal 专案的调查结果。（OPP/YouTube）
-</h6>
+<h6>省警官员于2024年10月29日公布了Opal 专案的调查结果。（OPP/YouTube）</h6>
 <hr>
-<p>【大纪元2024年10月30日讯】（大纪元记者王兰多伦多报导）安省警方 （OPP） 表示，4 人因涉全省多起银行抢劫案而被捕，另有一人仍逍遥法外，这些银行抢劫案可追溯到 2022 年底。</p>
-<p>调查人员在周二（10月29日）的新闻发布会上公布了 代号Opal 项目的调查结果，2022年12月8日至 2024 年 3月16 日期间，一群犯罪嫌疑人在安省西部、中部和东部抢劫了8家银行，涉案金额超过200万元</p>
-<p>2023 年 8 月，OPP官员在抢劫案中发现了“相似特征”，从而锁定了一组嫌疑人。</p>
+<p>【大纪元2024年10月30日讯】（大纪元记者王兰多伦多报导）安省警方 （OPP） 表示，4人因涉全省多起银行抢劫案而被捕，另有一人仍逍遥法外，这些银行抢劫案可追溯到2022年底。</p>
+<p>调查人员在周二（10月29日）的新闻发布会上公布了 代号Opal项目的调查结果，2022年12月8日至2024 年3月16日期间，一群犯罪嫌疑人在安省西部、中部和东部抢劫了8家银行，涉案金额超过200万元。</p>
+<p>2023年8月，OPP官员在抢劫案中发现了“相似特征”，从而锁定了一组嫌疑人。</p>
 <p>据称，在这些抢劫案中，有两三个人戴着口罩在银行关门前进入抢劫，在抢劫过程中，嫌犯持有至少一把手枪，但没有人员受伤的报告。为了防止现场留下指纹，嫌犯们戴上了手套。</p>
-<p>OPP 表示，在过去六起银行抢劫案中，银行员工都被绑住。</p>
-<p>2024 年 6月 21日，三名嫌疑人在安省菲尔德（Field）尼皮辛区的一家银行企图抢劫时被捕。 2024年 9月 25 日，第四名嫌疑人在安省旺市被捕。</p>
+<p>OPP表示，在过去六起银行抢劫案中，银行员工都被绑住。</p>
+<p>2024年6月21日，三名嫌疑人在安省菲尔德（Field）尼皮辛区的一家银行企图抢劫时被捕。 2024年 9月 25日，第四名嫌疑人在安省旺市被捕。</p>
 <p>四名嫌疑人面临包括暴力抢劫、出于危险目的持有武器、共谋可起诉犯罪和持枪抢劫等50项罪行指控。</p>
-<p>第五名嫌疑人仍在逃并被通缉。警方确认他是来自阿贾克斯。</p>
+<p>第五名嫌疑人仍在逃并被通缉。警方确认他是来自阿贾克斯。
+</p>
 <h2>被捕嫌犯和被通缉嫌犯如下：</h2>
-<p>Devonte Clark, 29, Whitby, Ont.<br />
+<p>
+Devonte Clark, 29, Whitby, Ont.<br />
 Keino Heath, 25, Oshawa, Ont.<br />
 David Newman, 24, Ajax, Ont.<br />
 Roderick Newman, 32, Cobourg, Ont.</p>
-<p><ahref="https://i.epochtimes.com/assets/uploads/2024/10/id14360354-suspected.jpg"><img loading="lazy" decoding="async" class="alignnone size-full wp-image-14360354" src="https://i.epochtimes.com/assets/uploads/2024/10/id14360354-suspected.jpg" alt="" width="1098" b="601" /></a><br />
+<p><ahref="https://i.epochtimes.com/assets/uploads/2024/10/id14360354-suspected.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="alignnone size-full wp-image-14360354" src="https://i.epochtimes.com/assets/uploads/2024/10/id14360354-suspected.jpg" alt="" width="1098" b="601"></a><br />
 Akeem Williams, 32, Ajax, Ont. (通缉)</p>
-<p>警方称，抢劫过程中被盗的 200 万元目前尚未追回。</p>
-<p>OPP 副局长马蒂·卡恩斯 （Marty Kearns） 表示：“Opal 项目需要多个警察部门进行广泛协调，以便在嫌疑人企图抢劫另一家银行之前识别并逮捕他们。”</p>
-<p>“通过他们的不懈努力，能够确保没有其他受害者承受恐惧和创伤。我对 Opal 专案成员的出色工作和对公共安全坚定不移的奉献表示感谢。”</p>
+<p>警方称，抢劫过程中被盗的200万元目前尚未追回。</p>
+<p>OPP副局长马蒂·卡恩斯（Marty Kearns）表示：“Opal项目需要多个警察部门进行广泛协调，以便在嫌疑人企图抢劫另一家银行之前识别并逮捕他们。”</p>
+<p>“通过他们的不懈努力，能够确保没有其他受害者承受恐惧和创伤。我对Opal专案成员的出色工作和对公共安全坚定不移的奉献表示感谢。”</p>
 <p>调查正在进行中，警方敦促任何有资讯的人联系当地执法部门。</p>
 <p>责任编辑：严枫</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360340.md#1">涉民宅纵火案 造成超200万损失 四名未成年少女被捕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359666.md#1">保守党承诺：售价低于100万元新房将免征货劳税</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359655.md#1">万锦市长提2025年预算 涨物业税3.88%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359642.md#1">万圣节有趣且危险 平安讨糖小贴士</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359636.md#1">多伦多9月新房销量下降69% 降息或带来转机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359606.md#1">贾平讲故事：斗争?星星?童年梦碎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359531.md#1">《九评》发表廿周年 加华人吁全民觉醒抛弃中共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14358960.md#1">多伦多公共图书馆计划实现全周开放</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/27/n14358940.md#1">留学生锐减 多伦多辛力加学院暂关万锦校区</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/9/n10770724.md#1" target="_blank">裴毅然：毛泽东真诚“感谢皇军”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/4/n10889466.md#1" target="_blank">裴毅然：中共小知党（四）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/8/9/n3655381.md#1" target="_blank">揭秘：中共诬陷法轮功是这样编出来的</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781764.md#1">太后临终前 竟让皇帝不要把皇位传给儿子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/9/n12607219.md#1">【元曲大家】散曲第一人马致远</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/22/n14355475.md#1">明日黄花蝶也愁！看苏轼怎样走出低谷 转化人生境界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/11/25/n12575680.md#1">如玉树临风 张养浩散曲赏析</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359080.md#1">美国9岁女孩突然描述前世生活 父母惊呆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359637.md#1">【新闻欣视角】七大摇摆州新民调 川贺争选民</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359497.md#1">【未解之谜】CIA禁书（上）揭秘文明的开启与终结</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/23/n14356474.md#1">【晚间新闻】北京发生无差别伤人案 5人受伤</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/27/n14358566.md#1">340万人拼“国考”一万多人竞争一个岗位</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/25/n14357937.md#1">粉丝们最爱 Costco当前最热门的12种美食</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347392.md#1">【一线直击】官场对习反感 躺平“四不干”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/26/n14358323.md#1">《钢之炼金术师15周年特别版》影评：对抗反派成弥补遗憾契机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359589.md#1">否认为歌曲版权起诉刀郎 云朵代言品牌遭下架</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/26/n14358435.md#1">杨幂包场挺赵丽颖新片 打破两人不和传闻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359656.md#1">遭向佐突搧巴掌 李小龙模仿者方小龙称已报警</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/26/n14358456.md#1">“泰勒丝主题邮轮”惊传乘客坠海 海警搜救无果</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359233.md#1">专家：面包放在这种东西旁边 会更快发霉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/27/n14358654.md#1">空服员值勤时如何度过休息时间？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/25/n14357934.md#1">铝箔纸这样用 家庭烤箱也能烤外酥里嫩五花肉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/22/n14355265.md#1">避免洗肾 2穴位2茶饮保养肾脏增强肾气</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/21/n14354626.md#1">避免心毒上身 中医师教你如何护心清毒</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652088.md#1">【直播】众议院民主党领袖杰弗里斯举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/10/29/n14360343.htm">抢劫全省8家银行超200万元 四人被捕 一人被通缉</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360343.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
